--- a/pom.xml
+++ b/pom.xml
@@ -4,22 +4,22 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>six.six</groupId>
-    <artifactId>keycloak-sms-authenticator-sns</artifactId>
-    <version>2.0.0</version>
+    <groupId>com.berkaybayraktar</groupId>
+    <artifactId>keycloak-sms-authenticator</artifactId>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.keycloak>3.4.3.Final</version.keycloak>
-        <version.wildfly>11.0.0.Final</version.wildfly>
-        <version.httpclient>4.5.5</version.httpclient>
-        <version.libphonenumber>8.9.0</version.libphonenumber>
-        <version.aws-java-sdk-sns>1.11.173</version.aws-java-sdk-sns>
+        <version.keycloak>4.3.0.Final</version.keycloak>
+        <version.wildfly>14.0.1.Final</version.wildfly>
+        <version.libphonenumber>8.9.16</version.libphonenumber>
+        <version.jboss-logging>3.3.2.Final</version.jboss-logging>
+        <version.httpclient>4.5.6</version.httpclient>
         <version.commons-lang>2.6</version.commons-lang>
-        <version.picketbox>5.0.2.Final</version.picketbox>
+        <version.picketbox>5.1.0.Final</version.picketbox>
     </properties>
     <build>
         <plugins>
@@ -89,12 +89,7 @@
         <dependency>
             <groupId>org.jboss.logging</groupId>
             <artifactId>jboss-logging</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.keycloak</groupId>
-            <artifactId>keycloak-services</artifactId>
-            <version>${version.keycloak}</version>
+            <version>${version.jboss-logging}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -104,38 +99,25 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk-sns</artifactId>
-            <version>${version.aws-java-sdk-sns}</version>
+            <groupId>org.keycloak</groupId>
+            <artifactId>keycloak-services</artifactId>
+            <version>${version.keycloak}</version>
             <scope>provided</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.fasterxml.jackson.core</groupId>
-                    <artifactId>jackson-databind</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.fasterxml.jackson.dataformat</groupId>
-                    <artifactId>jackson-core</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.googlecode.libphonenumber</groupId>
             <artifactId>libphonenumber</artifactId>
             <version>${version.libphonenumber}</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>${version.commons-lang}</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.picketbox</groupId>
             <artifactId>picketbox</artifactId>
             <version>${version.picketbox}</version>
-            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
